// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="root"
>
  <WithStyles(ForwardRef(Typography))
    className="sum"
    variant="h5"
  >
    <WithStyles(Money)
      currency="USD"
      multiplier={1}
      value={1000}
    />
  </WithStyles(ForwardRef(Typography))>
  <div
    className="secondary"
  >
    <div
      className="group"
      key="daily"
    >
      <WithStyles(Money)
        currency="USD"
        multiplier={1}
        pl={true}
        value={10}
      />
      <WithStyles(Percent)
        pl={true}
        value={0.1}
      />
    </div>
    <div
      className="group"
      key="market"
    >
      <WithStyles(Money)
        currency="USD"
        multiplier={1}
        pl={true}
        value={100}
      />
      <WithStyles(Percent)
        pl={true}
        value={1}
      />
    </div>
  </div>
  <WithStyles(ForwardRef(IconButton))
    className="currencyButton"
    onClick={[Function]}
  >
    <Memo([object Object]) />
  </WithStyles(ForwardRef(IconButton))>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    onClose={[Function]}
    open={false}
  >
    <WithStyles(ForwardRef(MenuItem))
      disabled={true}
      key="USD"
      onClick={[Function]}
    >
      U.S. Dollar
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      disabled={false}
      key="EUR"
      onClick={[Function]}
    >
      Euro
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      disabled={false}
      key="JPY"
      onClick={[Function]}
    >
      Japanese Yen
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      disabled={false}
      key="GBP"
      onClick={[Function]}
    >
      Pound Sterling
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      disabled={false}
      key="RUB"
      onClick={[Function]}
    >
      Russian Ruble
    </WithStyles(ForwardRef(MenuItem))>
  </WithStyles(ForwardRef(Menu))>
</div>
`;

exports[`matches snapshot when showing closed 1`] = `
<div
  className="root"
>
  <WithStyles(ForwardRef(Typography))
    className="sum"
    variant="h5"
  >
    <WithStyles(Money)
      currency="USD"
      multiplier={1}
      value={1000}
    />
  </WithStyles(ForwardRef(Typography))>
  <div
    className="secondary"
  >
    <div
      className="group"
      key="closed"
    >
      <WithStyles(Money)
        currency="USD"
        multiplier={1}
        pl={true}
        value={100}
      />
      <WithStyles(Percent)
        pl={true}
        value={1}
      />
    </div>
  </div>
  <WithStyles(ForwardRef(IconButton))
    className="currencyButton"
    onClick={[Function]}
  >
    <Memo([object Object]) />
  </WithStyles(ForwardRef(IconButton))>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    onClose={[Function]}
    open={false}
  >
    <WithStyles(ForwardRef(MenuItem))
      disabled={true}
      key="USD"
      onClick={[Function]}
    >
      U.S. Dollar
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      disabled={false}
      key="EUR"
      onClick={[Function]}
    >
      Euro
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      disabled={false}
      key="JPY"
      onClick={[Function]}
    >
      Japanese Yen
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      disabled={false}
      key="GBP"
      onClick={[Function]}
    >
      Pound Sterling
    </WithStyles(ForwardRef(MenuItem))>
    <WithStyles(ForwardRef(MenuItem))
      disabled={false}
      key="RUB"
      onClick={[Function]}
    >
      Russian Ruble
    </WithStyles(ForwardRef(MenuItem))>
  </WithStyles(ForwardRef(Menu))>
</div>
`;
